# dyn-eye

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  data details.txt  docker-compose.yml  main.py  model.py  pyproject.toml  sample_images.py  search_cols.py  single_vlm_3 copy 2.py  test_yolo.py
dashboard/: app.py
dashboard/static/: app.js  index.html  style.css
models/: registry.json
src/: __init__.py
src/features/: __init__.py  dinov2_extractor.py  faiss_index.py  known_defects_registry.py
src/label_studio/: __init__.py  _wsgi.py  export.py  model.py
src/pipeline/: graph.py  orchestrator.py  state.py
src/pipeline/nodes/: __init__.py  crop_extraction.py  faiss_search.py  feature_extraction.py  hdbscan_cluster.py  label_studio_sync.py  vlm_annotation.py  yolo_inference.py
src/retraining/: __init__.py  agent.py  llm_advisor.py  model_registry.py
src/retraining/tools/: __init__.py  dataset_validator.py  dvc_version.py  mlflow_deploy.py  train_yolo.py
src/utils/: __init__.py  io_helpers.py  log_stream.py  logger.py  metrics.py
