[project]
name = "dyn-eye"
version = "1.0.0"
description = "Unknown Defect Discovery & Continuous Learning Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ── ML Core ──
    "label-studio>=1.23.0",
    "label-studio-ml>=1.0.9",
    "ultralytics>=8.4.47",
    "torch==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
    # ── Pipeline Orchestration ──
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # ── Feature Extraction & Clustering ──
    "faiss-cpu>=1.9.0",
    "hdbscan>=0.8.40",
    "scikit-learn>=1.6.0",
    # ── VLM ──
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    # ── Dashboard ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # ── Experiment Tracking & Versioning ──
    "mlflow>=2.18.0",
    "dvc>=3.56.0",
    # ── Utilities ──
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "docker>=7.1.0",
    "python-multipart>=0.0.29",
]


[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
